Fixed row gap bug

--- a/src/components/Trek/Trek.css
+++ b/src/components/Trek/Trek.css
@@ -20,6 +20,8 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
+  grid-row-gap: 10px;
+  grid-column-gap: 10px;
   justify-items: center;
   align-items: center;
 }
